<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceScreen
        android:key="@string/pref_key_unlock_policy_preferences"
        android:title="@string/pref_title_unlock_policy"
        android:summary="" >
        
		<Preference
            android:key="pref_key_static_description_unlock_policy"
            android:selectable="false"
            android:summary="@string/explain_unlock_policy_prefs" />
                
        <com.manimahler.android.scheduler3g.ListPreferenceWithSummary
            android:defaultValue="2"
            android:entries="@array/listentries_unlock_policy"
            android:entryValues="@array/listvalues_unlock_policy"
            android:key="@string/pref_key_unlock_policy_wifi"
            android:summary=""
            android:title="@string/pref_dialog_title_unlock_policy_wifi" />
        <com.manimahler.android.scheduler3g.ListPreferenceWithSummary
            android:defaultValue="2"
            android:entries="@array/listentries_unlock_policy"
            android:entryValues="@array/listvalues_unlock_policy"
            android:key="@string/pref_key_unlock_policy_mob"
            android:summary=""
            android:title="@string/pref_dialog_title_unlock_policy_mob" />
    </PreferenceScreen>
    
    <PreferenceScreen
        android:key="@string/pref_key_interval_connect_preferences"
        android:title="@string/settings_title_interval_connect" >
        <Preference
            android:key="pref_key_static_description_intervallconnect"
            android:selectable="false"
            android:summary="@string/explain_interval_connection_prefs" />

        <EditTextPreference
            android:defaultValue="15"
            android:dialogTitle="@string/pref_dialog_title_connect_interval"
            android:key="@string/pref_key_connect_interval"
            android:maxLength="3"
            android:numeric="integer"
            android:summary="@string/pref_summary_connect_interval"
            android:title="@string/pref_title_connect_interval" />
        <EditTextPreference
            android:defaultValue="1.0"
            android:dialogTitle="@string/pref_dialog_title_connect_duration"
            android:key="@string/pref_key_connect_duration"
            android:maxLength="5"
            android:inputType="numberDecimal"
            android:summary="@string/pref_summary_connect_duration"
            android:title="@string/pref_title_connect_duration" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_key_interval_connect_wifi_keep_connected"
            android:summary="@string/pref_summary_interval_connect_wifi_keep_connected"
            android:title="@string/pref_title_interval_connect_wifi_keep_connected" />
        
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_key_interval_connect_suspend_when_charging"
            android:summary="@string/pref_summary_interval_connect_suspend_charging"
            android:title="@string/pref_title_interval_connect_suspend_charging" />
    </PreferenceScreen>

    <PreferenceCategory android:title="@string/settings_title_notifications" />

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="pref_key_warn_vibrate"
        android:summary="@string/pref_summary_warn_vibrate"
        android:title="@string/pref_title_warn_vibrate" />
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="pref_key_warn_sound"
        android:summary="@string/pref_summary_warn_sound"
        android:title="@string/pref_title_warn_sound" />

    <EditTextPreference
        android:defaultValue="60"
        android:dialogTitle="@string/pref_dialog_title_delay_min"
        android:key="@string/pref_key_delay_min"
        android:maxLength="3"
        android:numeric="integer"
        android:summary="@string/pref_summary_delay_min"
        android:title="@string/pref_title_delay_min" />

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="pref_key_notify_no_switchoff_unlocked"
        android:summary="@string/pref_summary_no_switchoff_unlocked"
        android:title="@string/pref_title_no_switchoff_unlocked" />

    <PreferenceCategory android:title="@string/settings_title_logging" />

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="pref_key_logging_enable"
        android:summary="@string/pref_summary_logging_enable"
        android:title="@string/pref_title_logging_enable" />

    <Preference
        android:key="pref_key_logging_show"
        android:summary="@string/pref_summary_logging_show"
        android:title="@string/pref_title_logging_show" />
    <Preference
        android:key="pref_key_logging_delete"
        android:summary="@string/pref_summary_logging_delete"
        android:title="@string/pref_title_logging_delete" />

</PreferenceScreen>